--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ugioni_unit-tests-jest
-sonar.organization=ugioni
+sonar.projectKey=Araldi42_unit-tests-jest2
+sonar.organization=araldi42
 sonar.projectName=Jest Unit Test
 sonar.projectVersion=1.0
 sonar.sources=./src
